test/unique/neg/swap-field-sel.check
swap-field-sel.scala:9: error: first parameter of swap must be a field selection
    swap(x, y)
        ^
one error found
